; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_array_initializer_sub.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_array_initializer_sub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"array designator exceeds array bounds: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_4__*, i32, i32)* @read_array_initializer_sub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_array_initializer_sub(i32* %0, %struct.TYPE_4__* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %16 = call i32 (...) @maybe_read_brace()
  store i32 %16, i32* %9, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp sle i32 %19, 0
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %10, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 2
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %11, align 4
  store i32 0, i32* %12, align 4
  br label %27

27:                                               ; preds = %108, %4
  %28 = load i32, i32* %10, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %36, label %30

30:                                               ; preds = %27
  %31 = load i32, i32* %12, align 4
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = icmp slt i32 %31, %34
  br label %36

36:                                               ; preds = %30, %27
  %37 = phi i1 [ true, %27 ], [ %35, %30 ]
  br i1 %37, label %38, label %111

38:                                               ; preds = %36
  %39 = call i32* (...) @get()
  store i32* %39, i32** %13, align 8
  %40 = load i32*, i32** %13, align 8
  %41 = call i64 @is_keyword(i32* %40, i8 signext 125)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %50

43:                                               ; preds = %38
  %44 = load i32, i32* %9, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %49, label %46

46:                                               ; preds = %43
  %47 = load i32*, i32** %13, align 8
  %48 = call i32 @unget_token(i32* %47)
  br label %49

49:                                               ; preds = %46, %43
  br label %117

50:                                               ; preds = %38
  %51 = load i32*, i32** %13, align 8
  %52 = call i64 @is_keyword(i32* %51, i8 signext 46)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %58, label %54

54:                                               ; preds = %50
  %55 = load i32*, i32** %13, align 8
  %56 = call i64 @is_keyword(i32* %55, i8 signext 91)
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %67

58:                                               ; preds = %54, %50
  %59 = load i32, i32* %9, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %67, label %61

61:                                               ; preds = %58
  %62 = load i32, i32* %8, align 4
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %67, label %64

64:                                               ; preds = %61
  %65 = load i32*, i32** %13, align 8
  %66 = call i32 @unget_token(i32* %65)
  br label %131

67:                                               ; preds = %61, %58, %54
  %68 = load i32*, i32** %13, align 8
  %69 = call i64 @is_keyword(i32* %68, i8 signext 91)
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %92

71:                                               ; preds = %67
  %72 = call i32* (...) @peek()
  store i32* %72, i32** %14, align 8
  %73 = call i32 (...) @read_intexpr()
  store i32 %73, i32* %15, align 4
  %74 = load i32, i32* %15, align 4
  %75 = icmp slt i32 %74, 0
  br i1 %75, label %85, label %76

76:                                               ; preds = %71
  %77 = load i32, i32* %10, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %89, label %79

79:                                               ; preds = %76
  %80 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %81 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %80, i32 0, i32 0
  %82 = load i32, i32* %81, align 8
  %83 = load i32, i32* %15, align 4
  %84 = icmp sle i32 %82, %83
  br i1 %84, label %85, label %89

85:                                               ; preds = %79, %71
  %86 = load i32*, i32** %14, align 8
  %87 = load i32, i32* %15, align 4
  %88 = call i32 @errort(i32* %86, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %87)
  br label %89

89:                                               ; preds = %85, %79, %76
  %90 = load i32, i32* %15, align 4
  store i32 %90, i32* %12, align 4
  %91 = call i32 @expect(i8 signext 93)
  store i32 1, i32* %8, align 4
  br label %95

92:                                               ; preds = %67
  %93 = load i32*, i32** %13, align 8
  %94 = call i32 @unget_token(i32* %93)
  br label %95

95:                                               ; preds = %92, %89
  %96 = load i32*, i32** %5, align 8
  %97 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %98 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %97, i32 0, i32 2
  %99 = load %struct.TYPE_5__*, %struct.TYPE_5__** %98, align 8
  %100 = load i32, i32* %7, align 4
  %101 = load i32, i32* %11, align 4
  %102 = load i32, i32* %12, align 4
  %103 = mul nsw i32 %101, %102
  %104 = add nsw i32 %100, %103
  %105 = load i32, i32* %8, align 4
  %106 = call i32 @read_initializer_elem(i32* %96, %struct.TYPE_5__* %99, i32 %104, i32 %105)
  %107 = call i32 (...) @maybe_skip_comma()
  store i32 0, i32* %8, align 4
  br label %108

108:                                              ; preds = %95
  %109 = load i32, i32* %12, align 4
  %110 = add nsw i32 %109, 1
  store i32 %110, i32* %12, align 4
  br label %27

111:                                              ; preds = %36
  %112 = load i32, i32* %9, align 4
  %113 = icmp ne i32 %112, 0
  br i1 %113, label %114, label %116

114:                                              ; preds = %111
  %115 = call i32 (...) @skip_to_brace()
  br label %116

116:                                              ; preds = %114, %111
  br label %117

117:                                              ; preds = %116, %49
  %118 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %119 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %118, i32 0, i32 0
  %120 = load i32, i32* %119, align 8
  %121 = icmp slt i32 %120, 0
  br i1 %121, label %122, label %131

122:                                              ; preds = %117
  %123 = load i32, i32* %12, align 4
  %124 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %125 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %124, i32 0, i32 0
  store i32 %123, i32* %125, align 8
  %126 = load i32, i32* %11, align 4
  %127 = load i32, i32* %12, align 4
  %128 = mul nsw i32 %126, %127
  %129 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %130 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %129, i32 0, i32 1
  store i32 %128, i32* %130, align 4
  br label %131

131:                                              ; preds = %64, %122, %117
  ret void
}

declare dso_local i32 @maybe_read_brace(...) #1

declare dso_local i32* @get(...) #1

declare dso_local i64 @is_keyword(i32*, i8 signext) #1

declare dso_local i32 @unget_token(i32*) #1

declare dso_local i32* @peek(...) #1

declare dso_local i32 @read_intexpr(...) #1

declare dso_local i32 @errort(i32*, i8*, i32) #1

declare dso_local i32 @expect(i8 signext) #1

declare dso_local i32 @read_initializer_elem(i32*, %struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @maybe_skip_comma(...) #1

declare dso_local i32 @skip_to_brace(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
